# XAUUSA_PaperTrading

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ENGINE.md  LOGIC.md  PLAN.md  README.md  app.js  dashboard.html  package-lock.json  pyproject.toml  requirements.txt  server.js
.agents/skills/add-trading-rule/: SKILL.md
.agents/skills/xauusd-trader/: SKILL.md
.claude/skills/add-trading-rule/: SKILL.md
.claude/skills/backtest-review/: SKILL.md
.claude/skills/xauusd-trader/: SKILL.md
data/clean/dukascopy/: XAUUSD_15min.parquet  XAUUSD_1day.parquet  XAUUSD_1h.parquet  XAUUSD_30min.parquet  XAUUSD_4h.parquet
data/clean/twelvedata/: XAUUSD_15min.parquet  XAUUSD_1day.parquet  XAUUSD_1h.parquet  XAUUSD_30min.parquet  XAUUSD_4h.parquet
reports/: latest.json  latest.md
scripts/: backfill_history.py  fetch_dukascopy.py  fetch_twelvedata.py  run_backtest.py
src/: api_server.py  backtest.py  config.py  contracts.py  data.py  features.py  live.py  risk.py  rules.py  signal.py
src/providers/: base.py  dukascopy.py  twelvedata.py
tests/: conftest.py  test_backtest.py  test_data.py  test_dukascopy.py  test_features.py  test_no_lookahead.py  test_risk.py  test_rules.py
