[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-signal-engine"
version = "0.1.0"
description = "Decision-support LONG/SHORT/FLAT signal engine for XAU/USD (research only, no live orders)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
